[gd_scene load_steps=6 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/grass.png" type="Texture" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="main" type="Node"]
script = ExtResource( 1 )
Coin = ExtResource( 2 )
playtime = 5

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="player" parent="." instance=ExtResource( 4 )]

[node name="CoinContainer" type="Node" parent="."]

[node name="playerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="gameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]
[connection signal="hurt" from="player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="gameTimer" to="." method="_on_gameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
